--- a/public-transport-tracker-ng/src/styles.css
+++ b/public-transport-tracker-ng/src/styles.css
@@ -1,1 +1,106 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    display: table-cell;
+    vertical-align: middle;
+    font-size: clamp(24px, 4vw, 40px);
+    text-align: left;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
+h1 > hr {
+    border: none;
+    height: 8px;
+    width:  clamp(50px, 10vw, 120px);
+    margin-left: 0px;
+    margin-right: auto;
+    margin-top: 20px;
+    background-color: #000000;
+}
+
+h2 {
+    font-size: 22px;
+    margin-top: 24px;
+    margin-left: 24px;
+}
+
+button {
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 10px;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #dadada;
+}
+
+button:hover {
+    background-color: #c8c8c8;
+}
+
+.dark-button {
+    background-color: #003030;
+    color: white;
+}
+
+.dark-button:hover {
+    background-color: #000000;
+    color: white;
+}
+
+.h1-wrapper {
+    display: grid;
+    align-items: center;
+}
+
+#footer-wrapper {
+    margin-top: auto;
+    padding: 20px;
+    text-align: center;
+    font-size: 12px;
+}
+
+/* mark invalid inputs red */
+input.ng-invalid.ng-touched {
+    border-color: #b80000;
+}
+
+app-root {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+app-welcome {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+app-login {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+app-register {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
