--- a/public-transport-tracker-ng/src/styles.css
+++ b/public-transport-tracker-ng/src/styles.css
@@ -17,7 +17,7 @@ body {
 h1 {
     display: table-cell;
     vertical-align: middle;
-    font-size: clamp(24px, 4vw, 40px);
+    font-size: clamp(26px, 4vw, 40px);
     text-align: left;
     padding-left: 24px;
     padding-right: 24px;
@@ -34,7 +34,7 @@ h1 > hr {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: clamp(24px, 3.5vw, 35px);
     margin-top: 24px;
     margin-left: 24px;
 }
@@ -69,16 +69,122 @@ button:hover {
     align-items: center;
 }
 
-#footer-wrapper {
+.component-box {
     margin-top: auto;
-    padding: 20px;
+    margin-bottom: auto;
+    margin-left: 24px;
+    margin-right: 24px;
+    padding: 24px;
+    border: 1px solid #dedede;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+form > label {
+    flex: 1;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+form > p {
     text-align: center;
-    font-size: 12px;
+}
+
+a {
+    color: #003030;
+}
+
+a:hover {
+    color: black;
+}
+
+.text-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.text-input > span {
+    margin-bottom: 5px;
+    font-size: 16px;
+}
+
+.text-input > input {
+    border: 1px solid #dedede;
+    border-radius: 8px;
+    padding: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 /* mark invalid inputs red */
 input.ng-invalid.ng-touched {
     border-color: #b80000;
+    color: #b80000;
+}
+input.ng-invalid.ng-touched::placeholder {
+    color: #b80000;
+}
+
+.radio-group-wrapper > span {
+    margin-top: 5px;
+    font-size: 16px;
+}
+
+.radio-group {
+    display: flex;
+    flex-direction: row;
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
+.radio-group > label {
+    flex: 1;
+    border: 1px solid black;
+    border-radius: 8px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 5px;
+    text-align: center;
+    background-color: #f8f8f8;
+}
+
+.radio-group label:first-child {
+    margin-left: 0px;
+}
+
+.radio-group label:last-child {
+    margin-right: 0px;
+}
+
+.radio-group label:has(> input:checked) {
+    background-color: #003030;
+    color: white;
+}
+
+.radio-group label:has(> input:not(:checked)):hover {
+    background-color: #dadada;
+}
+
+.radio-group input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+#footer-wrapper {
+    margin-top: auto;
+    padding: 20px;
+    text-align: center;
+    font-size: 12px;
 }
 
 app-root {
