--- a/public-transport-tracker-ng/src/app/user/user.component.html
+++ b/public-transport-tracker-ng/src/app/user/user.component.html
@@ -1,26 +1,13 @@
-<h2>List of Users</h2>
+<h2>Users</h2>
 
-<table>
-    <tr>
-        <th>id</th>
-        <th>username</th>
-        <th>email</th>
-        <th>password</th>
-        <th>roleIds</th>
-        <th>createdAt</th>
-        <th>updatedAt</th>
-        <th>refreshVersion</th>
-    </tr>
-    @for (user of users; track user.id) {
-        <tr>
-            <td>{{user.id}}</td>
-            <td>{{user.username}}</td>
-            <td>{{user.email}}</td>
-            <td>{{user.password}}</td>
-            <td>{{user.roleIds}}</td>
-            <td>{{user.createdAt}}</td>
-            <td>{{user.updatedAt}}</td>
-            <td>{{user.refreshVersion}}</td>
-        </tr>
-    }
-</table> 
+<div class="component-box component-box-list">
+    <ul>
+        @for (user of users; track user.id) {
+            <li routerLink="/users/{{ user.username }}">
+                <h1>{{ user.username }}</h1>
+                <span>{{ user.createdAt | date:'dd.MM.yyyy HH:mm' }}</span>
+            </li>
+            <div class="vline"></div>
+        }
+    </ul>
+</div>
