--- a/public-transport-tracker-ng/src/styles.css
+++ b/public-transport-tracker-ng/src/styles.css
@@ -34,7 +34,7 @@ h1 > hr {
 }
 
 h2 {
-    font-size: clamp(24px, 3.5vw, 35px);
+    font-size: clamp(26px, 3.5vw, 36px);
     margin-top: 24px;
     margin-left: 24px;
 }
@@ -76,7 +76,7 @@ button:hover {
     margin-right: 24px;
     padding: 24px;
     border: 1px solid #dedede;
-    border-radius: 5px;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
 }
@@ -175,9 +175,50 @@ input.ng-invalid.ng-touched::placeholder {
 }
 
 .radio-group input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+div.vline {
+    background-color: #dedede;
+    height: 1px;
+}
+
+ul {
+    list-style-type: none;
+    padding-inline-start: 0px;
+}
+
+ul > div.vline:last-child {
+    display: none;
+}
+
+ul > div.vline {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+ul li {
+    border-radius: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+ul li:hover {
+    background-color: #003030;
+    color: white;
+}
+
+ul li h1 {
+    padding: 0px;
+    font-size: 18px;
+}
+
+.component-box-list {
+    padding: 10px;
 }
 
 #footer-wrapper {
@@ -206,6 +247,12 @@ app-login {
 }
 
 app-register {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+app-users {
     flex: 1;
     display: flex;
     flex-direction: column;
