--- a/public-transport-tracker-ng/src/styles.css
+++ b/public-transport-tracker-ng/src/styles.css
@@ -257,3 +257,33 @@ app-users {
     display: flex;
     flex-direction: column;
 }
+
+@media (min-width: 600px) {
+    div.component-box {
+        margin-top: 0;
+        margin-left: 18vw;
+        margin-right: 18vw;
+    }
+
+    h2 {
+        margin-left: 18vw;
+
+        margin-top: auto;
+        margin-bottom: 20px;
+    }
+}
+
+@media (min-width: 1200px) {
+    div.component-box {
+        margin-left: 25vw;
+        margin-right: 25vw;
+    }
+
+    h2 {
+        margin-left: 25vw;
+
+        margin-top: auto;
+        margin-bottom: 20px;
+    }
+}
+
