--- a/public-transport-tracker-ng/src/styles.css
+++ b/public-transport-tracker-ng/src/styles.css
@@ -258,6 +258,12 @@ app-users {
     flex-direction: column;
 }
 
+app-user-details {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 @media (min-width: 600px) {
     div.component-box {
         margin-top: 0;
