Implement permission based Authorization with user controller

--- a/public-transport-tracker-ng/src/app/auth/login/login.component.html
+++ b/public-transport-tracker-ng/src/app/auth/login/login.component.html
@@ -1,4 +1,6 @@
-<h2>Login</h2>
+<h2>Anmeldung</h2>
+
+<button class="return-button" routerLink="/welcome">&lt;</button>
 
 <div class="component-box">
     <form [formGroup]="form" (ngSubmit)="login()">
