Do logout when proceeding without account

--- a/public-transport-tracker-ng/src/app/welcome/welcome.component.html
+++ b/public-transport-tracker-ng/src/app/welcome/welcome.component.html
@@ -3,5 +3,5 @@
 </div>
 <div class="buttons-wrapper">
     <button routerLink="/login" class="dark-button">Anmelden oder Profil erstellen</button>
-    <button routerLink="/">Ohne Anmeldung fortfahren</button>
+    <button (click)=continueWithoutAccount()>Ohne Anmeldung fortfahren</button>
 </div>
