--- a/public-transport-tracker-ng/src/app/welcome/welcome.component.css
+++ b/public-transport-tracker-ng/src/app/welcome/welcome.component.css
@@ -1,12 +1,12 @@
 .h1-wrapper {
     flex: 1;
-    margin-top: 20vh;
+    margin-top: 20dvh;
 }
 
 .buttons-wrapper {
     display: flex;
     flex-direction: column;
-    margin-bottom: 5vh;
+    margin-bottom: 5dvh;
     margin-top: auto;
 }
 
