--- a/public-transport-tracker-ng/src/styles.css
+++ b/public-transport-tracker-ng/src/styles.css
@@ -9,7 +9,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
 }
