--- a/public-transport-tracker-ng/src/app/trip/nearby-trips/nearby-trips.component.html
+++ b/public-transport-tracker-ng/src/app/trip/nearby-trips/nearby-trips.component.html
@@ -1,6 +1,6 @@
 <h2>Fahrzeuge in der Nähe</h2>
 
-<div class="component-box">
+<div class="component-box component-box-list">
     @if (trips && trips.length > 0) {
         <ul>
             @for (trip of trips; track trip.id) {
