Add welcome guard and home component

--- a/public-transport-tracker-ng/src/app/user/users/users.component.html
+++ b/public-transport-tracker-ng/src/app/user/users/users.component.html
@@ -1,6 +1,6 @@
 <h2>Nutzer</h2>
 
-<button class="return-button" routerLink="/">&lt;</button>
+<button class="return-button" routerLink="/home">&lt;</button>
 
 <div class="component-box component-box-list">
     @if (authService.hasPermission('CREATE_USER')) {
