--- a/public-transport-tracker-ng/src/app/user/create-user/create-user.component.html
+++ b/public-transport-tracker-ng/src/app/user/create-user/create-user.component.html
@@ -47,12 +47,14 @@
 
                     <ul formArrayName="permissions" class="permissions">
                         @for (perm of permissions; track $index; let i = $index) {
-                            <li>
-                                <label class="permission-item">
-                                    <input type="checkbox" [formControlName]="i">
-                                    <span>{{ perm }}</span>
-                                </label>
-                            </li>
+                            @if (perm !== "LOGIN") {
+                                <li>
+                                    <label class="permission-item">
+                                        <input type="checkbox" [formControlName]="i">
+                                        <span>{{ perm }}</span>
+                                    </label>
+                                </li>
+                            }
                         }
                     </ul>
                 </div>
